--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,15 @@
   },
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
     "buefy": "^0.9.4",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "vue": "^2.6.12",
+    "vue-apollo": "^3.0.5",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
