--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
+    "axios": "^0.21.0",
     "buefy": "^0.9.4",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
