--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-vue": "^7.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.0",
     "prettier-eslint": "^12.0.0",
     "sass-loader": "^10.1.0",
