--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,31 +1,30 @@
-name: Elixir CI
+name: elixir
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
-    name: Build and test
+    name: build and test
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: get elixir
-      uses: actions/setup-elixir@v1
-      with:
-        elixir-version: '1.10.3' # Define the elixir version [required]
-        otp-version: '22.3' # Define the OTP version [required]
-    - name: restore dependencies cache
-      uses: actions/cache@v2
-      with:
-        path: deps
-        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-        restore-keys: ${{ runner.os }}-mix-
-    - name: get deps
-      run: mix deps.get
-    - name: run tests
-      run: mix test
+      - uses: actions/checkout@v2
+      - name: get elixir
+        uses: actions/setup-elixir@v1
+        with:
+          elixir-version: "1.10.3" # Define the elixir version [required]
+          otp-version: "22.3" # Define the OTP version [required]
+      - name: restore dependencies cache
+        uses: actions/cache@v2
+        with:
+          path: deps
+          key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+          restore-keys: ${{ runner.os }}-mix-
+      - name: get deps
+        run: mix deps.get
+      - name: run tests
+        run: mix test
