--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,9 @@
     "serve": "webpack serve",
     "servesecure": "webpack serve --https",
     "lint": "eslint 'src/**/*.{ts,vue}' --fix",
-    "format": "prettier --config .prettier.config.js 'src/**/*.{ts,vue}' --write"
+    "format": "prettier --config .prettier.config.js 'src/**/*.{ts,vue}' --write",
+    "test:unit": "jest --coverage",
+    "test:watch": "jest --coverage --watchAll"
   },
   "private": true,
   "dependencies": {
@@ -27,8 +29,12 @@
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/vue": "^5.6.1",
+    "@types/jest": "^26.0.18",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
+    "@vue/test-utils": "^1.1.1",
     "css-loader": "^5.0.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
@@ -36,15 +42,21 @@
     "eslint-plugin-vue": "^7.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
+    "jsdom": "^16.4.0",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.0",
     "prettier-eslint": "^12.0.0",
     "sass-loader": "^10.1.0",
+    "sinon": "^9.2.1",
     "source-map-loader": "^1.1.2",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
     "vue-eslint-parser": "^7.1.1",
+    "vue-jest": "^3.0.7",
     "vue-loader": "^15.9.5",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
