move to class based components, fix some ts issues

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -14,9 +14,9 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["*"]
     }
   },
   "include": [
