--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "graphql-tag": "^2.11.0",
     "vue": "^2.6.12",
     "vue-apollo": "^3.0.5",
+    "vue-class-component": "^7.2.6",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "ts-loader": "^8.0.11",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
+    "vls": "^0.6.4",
     "vue-eslint-parser": "^7.1.1",
     "vue-jest": "^3.0.7",
     "vue-loader": "^15.9.5",
